--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,6 +214,9 @@ footer {
 }
 
 @media screen and (max-width: 767px) {
+  header {
+    flex-wrap: wrap;
+  }
   .nav-navbar {
     display: none;
   }
