--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,8 @@ main {
   gap: 50px;
   align-items: center;
   justify-content: space-between;
-  margin-block: 100px;
+  margin-top: 100px;
+  margin-bottom: 50px;
 }
 .hero > article {
   flex-basis: 50%;
@@ -217,6 +218,9 @@ footer {
   .nav-navbar {
     display: none;
   }
+  nav > .resume {
+    display: none;
+  }
   .hero > aside {
     border-radius: 10px;
     box-shadow: 20px 20px 0 var(--Secondary);
@@ -229,5 +233,14 @@ footer {
 @media screen and (max-width: 400px) {
   nav > .resume {
     display: none;
+  }
+  .hero article div.judul > h1 {
+    font-size: 2rem;
+  }
+  .hero article > .button {
+    flex-direction: column;
+  }
+  h1 {
+    font-size: 2rem;
   }
 }
