--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ main {
   margin-bottom: 50px;
 }
 .hero > article {
-  flex-basis: 50%;
+  flex-basis: 70%;
 }
 .hero article > div {
   margin-bottom: 20px;
@@ -108,7 +108,21 @@ main {
   gap: 10px;
   align-items: center;
 }
-.hero aside {
+.hero > aside {
+  display: flex;
+  justify-content: flex-end;
+}
+.hero aside > img {
+  border-radius: 50%;
+  box-shadow: 0px 20px 0px 0px rgba(187, 225, 250, 0.25);
+  max-width: 250px;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+.hero aside > img:hover {
+  opacity: 0.75;
+}
+/* .hero aside {
   background: url("../img/Profile.jpg");
   background-position: center;
   width: 300px;
@@ -122,7 +136,7 @@ main {
 }
 .hero aside:hover {
   opacity: 0.5;
-}
+} */
 /* Hero End */
 
 /* Blog */
@@ -141,7 +155,7 @@ section.blog {
   font-weight: 500;
   font-size: 1.3rem;
 }
-.blog > article {
+.blog > .konten {
   display: flex;
   gap: 20px;
 }
@@ -175,15 +189,21 @@ section.blog {
   padding-bottom: 20px;
   border-bottom: 1px solid #e0e0e0;
   cursor: pointer;
+  transition: 0.3s ease;
+}
+.isi-works:hover {
+  opacity: 0.75;
+  scale: 1.01;
 }
 .isi-works > .img-works {
-  width: 5000px;
+  flex-basis: 500px;
+}
+.isi-works .img-works > img {
+  width: 100%;
   height: 200px;
   border-radius: 5px;
-  background: url("../img/Project.png");
   background-size: cover;
-  background-position: center;
-  flex-basis: 500px;
+  object-fit: cover;
 }
 .isi-works .content-works .tanggal-content {
   display: flex;
@@ -206,7 +226,7 @@ footer {
 
 /* Media Query */
 @media screen and (max-width: 1023px) {
-  .blog > article {
+  .blog > .konten {
     flex-wrap: wrap;
   }
   .isi-works {
@@ -221,7 +241,7 @@ footer {
   nav > .resume {
     display: none;
   }
-  .hero > aside {
+  .hero aside > img {
     border-radius: 10px;
     box-shadow: 20px 20px 0 var(--Secondary);
   }
